src/objects/Product_Category_Condition__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The category that the matching products will be assigned to.</inlineHelpText>
        <label>Category</label>
        <referenceTo>ProductCategory</referenceTo>
        <relationshipLabel>Product Category Conditions</relationshipLabel>
        <relationshipName>Product_Category_Conditions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <inlineHelpText>Type of the field that will be used for the mapping on Product records.</inlineHelpText>
        <label>Field Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>String</fullName>
                </value>
                <value>
                    <fullName>Picklist-Multiselect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <inlineHelpText>The operation of how the mapping of Product fields versus the Value field will be done.</inlineHelpText>
        <label>Operation</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Included</fullName>
                </value>
                <value>
                    <fullName>Equals</fullName>
                </value>
                <value>
                    <fullName>Does Not Equal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Field_Name__c</fullName>
        <inlineHelpText>Name of the field that will be used for the mapping on Product records.</inlineHelpText>
        <label>Product Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Values__c</fullName>
        <inlineHelpText>The semi-column separated values for the Product to Category mapping.</inlineHelpText>
        <label>Values</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Product Category Condition</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Product Category Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Category Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>